/*
 * Copyright (c) 2026 by Oliver Boehm
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express orimplied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 * (c)reated 05.08.2026 by oboehm (ob@jfachwert.de)
 */
package de.jfachwert.validation

import de.jfachwert.Fachwert
import jakarta.validation.ConstraintValidator
import jakarta.validation.ConstraintValidatorContext

/**
 * Der FachwertConstraintValidator implementiert das ConstraintValidator-Interface
 * von Jakarta und validiert, ob ein Fachwert gueltig ist.
 *
 * @author oboehm
 * @since 6.8.1
 */
class FachwertConstraintValidator<A : Annotation> : ConstraintValidator<A, Fachwert> {

    override fun isValid(fachwert: Fachwert, context: ConstraintValidatorContext): Boolean {
        if (fachwert.isValid) {
            return true
        }
        context.disableDefaultConstraintViolation()
        context.buildConstraintViolationWithTemplate(fachwert.toLongString())
            .addConstraintViolation()
        return false
    }

}
