@startuml

package "validation" {

    class FachwertValidator
    class FachwertValidatorFactory
    class FachwertValidatorContext

    class FachwertConstraintValidator
    class FachwertConstraintValidatorContext
    class FachwertConstraintValidatorFactory
    class FachwertConstraintViolation

    package "executable" {
        class FachwertExecutableValidator
    }

}

interface "jakarta.validation.Validator"
interface "jakarta.validation.ValidatorFactory"
interface "jakarta.validation.ValidatorContext"
interface "jakarta.validation.executable.ExecutableValidator"
interface "jakarta.validation.ConstraintValidator"
interface "jakarta.validation.ConstraintValidatorContext"
interface "jakarta.validation.ConstraintValidatorFactory"
interface "jakarta.validation.ConstraintViolation"

FachwertValidator ..|> "jakarta.validation.Validator"
FachwertValidatorFactory ..|> "jakarta.validation.ValidatorFactory"
FachwertValidatorContext ..|> "jakarta.validation.ValidatorContext"
FachwertExecutableValidator ..|> "jakarta.validation.executable.ExecutableValidator"
FachwertConstraintValidator ..|> "jakarta.validation.ConstraintValidator"
FachwertConstraintValidatorContext ..|> "jakarta.validation.ConstraintValidatorContext"
FachwertConstraintValidatorFactory ..|> "jakarta.validation.ConstraintValidatorFactory"
FachwertConstraintViolation ..|> "jakarta.validation.ConstraintViolation"

FachwertValidatorFactory ..> FachwertValidator : erzeugt
FachwertValidatorFactory ..> FachwertValidatorContext : usingContext()
FachwertValidator ..> FachwertConstraintViolation
FachwertValidator ..> FachwertConstraintValidator
FachwertConstraintValidator ..> FachwertConstraintValidatorContext

@enduml
